# element-moseq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conda_env.yml  cspell.json  env.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: mkdocs-release-caller.yml  test.yaml
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/api/element_moseq/moseq_infer/: index.html
0.2/api/element_moseq/moseq_train/: index.html
0.2/api/element_moseq/readers/kpms_reader/: index.html
0.2/api/navigation/: index.html
0.2/citation/: index.html
0.2/concepts/: index.html
0.2/partnerships/: index.html
0.2/pipeline/: index.html
0.2/roadmap/: index.html
0.2/search/: search_index.json
0.2/tutorials/: index.html
0.2/tutorials/tutorial/: index.html
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/api/element_moseq/moseq_infer/: index.html
0.3/api/element_moseq/moseq_train/: index.html
0.3/api/element_moseq/readers/kpms_reader/: index.html
0.3/api/navigation/: index.html
0.3/citation/: index.html
0.3/concepts/: index.html
0.3/partnerships/: index.html
0.3/pipeline/: index.html
0.3/roadmap/: index.html
0.3/search/: search_index.json
0.3/tutorials/: index.html
0.3/tutorials/tutorial/: index.html
docs/: docker-compose.yaml  mkdocs.yaml
docs/src/: citation.md  concepts.md  index.md  partnerships.md  pipeline.md  roadmap.md
docs/src/tutorials/: index.md
element_moseq/: __init__.py  kpms_model.py  kpms_pca.py  model.py  moseq_infer.py  moseq_report.py  moseq_train.py  pca.py  reference.py  report.py  train.py  version.py
element_moseq/plotting/: viz_utils.py
element_moseq/readers/: kpms_reader.py
images/: flowchart.drawio
notebooks/: testing.ipynb  tutorial.ipynb  tutorial_pipeline.py
tests/: tutorial_pipeline.py
