[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "element-moseq"
version = "1.0.1"
description = "Keypoint-MoSeq DataJoint Element"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DataJoint", email = "info@datajoint.com"}
]
keywords = ["neuroscience", "keypoint-moseq", "science", "datajoint","workflow"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "datajoint>=0.14.0",
    "ipykernel>=6.0.1",
    "ipywidgets",
    "opencv-python",
    "keypoint-moseq @ git+https://github.com/dattalab/keypoint-moseq/",
    "pdf2image",
]

[project.optional-dependencies]

deeplabcut = [
    "element-deeplabcut @ git+https://github.com/datajoint/element-deeplabcut.git",
]

elements = [
    "element-lab @ git+https://github.com/datajoint/element-lab.git",
    "element-session @ git+https://github.com/datajoint/element-session.git",
    "element-interface @ git+https://github.com/datajoint/element-interface.git",
    "element-animal @ git+https://github.com/datajoint/element-animal.git",
]

tests = [
    "pytest",
    "pytest-cov",
    "shutils",
]

all = [
    "element-moseq[deeplabcut,elements,tests]",
]

[project.urls]
Homepage = "https://github.com/datajoint/element-moseq"
Repository = "https://github.com/datajoint/element-moseq"
Documentation = "https://github.com/datajoint/element-moseq"

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.pyd", "__pycache__", "*.so"]
